--- a/src/app/drafts/opponent-overview/opponent-preview/opponent-preview.component.html
+++ b/src/app/drafts/opponent-overview/opponent-preview/opponent-preview.component.html
@@ -1,12 +1,5 @@
-<div class="flex min-h-full gap-2">
-  @if (draft) {
-    <div class="draft-bar">
-      @for (pokemon of draft.team; track $index) {
-        <pdz-sprite [pokemon]="pokemon" [flipped]="true"> </pdz-sprite>
-      }
-    </div>
-  }
-  <div class="matchups-section alternate">
+<div class="preview-main">
+  <section class="matchups-section alternate">
     <div class="section-header">
       <h3>Matches</h3>
       <!-- <button
@@ -26,24 +19,26 @@
     @if (matchups) {
       <div class="matchups-container">
         @for (matchup of matchups; track $index) {
-          <div class="matchup">
-            <div class="matchup-header">
-              <div class="matchup-team-info">
-                <div class="team-name">{{ matchup.teamName }}</div>
-                @if (matchup.coach) {
-                  <div class="coach-name">{{ matchup.coach }}</div>
+          <div
+            class="matchup alternate"
+            routerLink="matchup"
+            [queryParams]="{ id: matchup._id }"
+          >
+            <div class="matchup-info">
+              <div class="matchup-stage">{{ matchup.stage }}</div>
+              <div class="matchup-team-info-container">
+                @if (matchup.logo) {
+                  <div class="matchup-logo">
+                    <img src="https://placehold.co/400" />
+                  </div>
                 }
+                <div class="matchup-team-info">
+                  <div class="team-name">{{ matchup.teamName }}</div>
+                  @if (matchup.coach) {
+                    <div class="coach-name">{{ matchup.coach }}</div>
+                  }
+                </div>
               </div>
-              <button
-                class="score-button"
-                [style.background-color]="scoreColor(matchup)"
-              >
-                @if (matchup.score) {
-                  {{ scoreString(matchup) }}
-                } @else {
-                  Add Score
-                }
-              </button>
             </div>
 
             <div class="pokemon-container">
@@ -51,10 +46,29 @@
                 <pdz-sprite [pokemon]="pokemon"></pdz-sprite>
               }
             </div>
-            <div class="flex">
-              <button>View Matchup</button>
+            <div class="options-container">
+              <button
+                routerLink="score"
+                [queryParams]="{ matchup: matchup._id }"
+              >
+                <div class="score-button" [ngClass]="scoreClass(matchup)">
+                  <div>
+                    @if (matchup.score) {
+                      {{ scoreString(matchup) }}
+                    } @else {
+                      Add Score
+                    }
+                  </div>
+                </div>
+              </button>
 
-              <button mat-icon-button><mat-icon>edit</mat-icon></button>
+              <button
+                mat-icon-button
+                routerLink="edit"
+                [queryParams]="{ matchup: matchup._id }"
+              >
+                <mat-icon>edit</mat-icon>
+              </button>
               <button mat-icon-button>
                 <mat-icon>delete_forever</mat-icon>
               </button>
@@ -69,8 +83,141 @@
     } @else {
       <loading></loading>
     }
-  </div>
-  <div class="stats-section">
+  </section>
+  <section class="stats-section">
     <div class="section-header">Stats</div>
-  </div>
+    @if (teamStats.value !== null) {
+      @if (teamStats.value.length > 0) {
+        <div class="content-container">
+          <div class="table-container">
+            <div class="table-wrapper">
+              <table
+                cdk-table
+                [dataSource]="teamStats.value!"
+                matSort
+                [matSortDisableClear]="true"
+                (matSortChange)="sort($event)"
+              >
+                <ng-container cdkColumnDef="sprite">
+                  <th cdk-header-cell *cdkHeaderCellDef></th>
+                  <td cdk-cell *cdkCellDef="let element">
+                    <div class="sprite-wrapper">
+                      <pdz-sprite
+                        [flipped]="true"
+                        [pokemon]="element.pokemon"
+                      ></pdz-sprite>
+                    </div>
+                  </td>
+                </ng-container>
+                <ng-container cdkColumnDef="name">
+                  <th mat-sort-header="name" cdk-header-cell *cdkHeaderCellDef>
+                    Name
+                  </th>
+                  <td cdk-cell *cdkCellDef="let element">
+                    {{ element.pokemon.name }}
+                  </td>
+                </ng-container>
+
+                <ng-container cdkColumnDef="gb">
+                  <th
+                    mat-sort-header="gb"
+                    start="desc"
+                    cdk-header-cell
+                    *cdkHeaderCellDef
+                  >
+                    Games Brought
+                  </th>
+                  <td cdk-cell *cdkCellDef="let element">
+                    {{ element.brought }}
+                  </td>
+                </ng-container>
+
+                <ng-container cdkColumnDef="dk">
+                  <th
+                    mat-sort-header="dk"
+                    start="desc"
+                    cdk-header-cell
+                    *cdkHeaderCellDef
+                  >
+                    Direct Kills
+                  </th>
+                  <td cdk-cell *cdkCellDef="let element">
+                    {{ element.kills }}
+                  </td>
+                </ng-container>
+
+                <ng-container cdkColumnDef="ik">
+                  <th
+                    mat-sort-header="ik"
+                    start="desc"
+                    cdk-header-cell
+                    *cdkHeaderCellDef
+                  >
+                    Indirect Kills
+                  </th>
+                  <td cdk-cell *cdkCellDef="let element">
+                    {{ element.indirect }}
+                  </td>
+                </ng-container>
+
+                <ng-container cdkColumnDef="deaths">
+                  <th
+                    mat-sort-header="deaths"
+                    start="desc"
+                    cdk-header-cell
+                    *cdkHeaderCellDef
+                  >
+                    Deaths
+                  </th>
+                  <td cdk-cell *cdkCellDef="let element">
+                    {{ element.deaths }}
+                  </td>
+                </ng-container>
+
+                <ng-container cdkColumnDef="kdr">
+                  <th
+                    mat-sort-header="kdr"
+                    start="desc"
+                    cdk-header-cell
+                    *cdkHeaderCellDef
+                  >
+                    Kills/Deaths
+                  </th>
+                  <td cdk-cell *cdkCellDef="let element">
+                    {{ element.kdr | number: "1.0-2" }}
+                  </td>
+                </ng-container>
+
+                <ng-container cdkColumnDef="kpg">
+                  <th
+                    mat-sort-header="kpg"
+                    start="desc"
+                    cdk-header-cell
+                    *cdkHeaderCellDef
+                  >
+                    Kills/Game
+                  </th>
+                  <td cdk-cell *cdkCellDef="let element">
+                    {{ element.kpg | number: "1.0-2" }}
+                  </td>
+                </ng-container>
+
+                <tr cdk-header-row *cdkHeaderRowDef="displayedColumns"></tr>
+                <tr
+                  cdk-row
+                  *cdkRowDef="let row; columns: displayedColumns"
+                ></tr>
+              </table>
+            </div>
+          </div>
+        </div>
+      } @else {
+        <div class="score-placeholder">
+          Score your first match to see your stats
+        </div>
+      }
+    } @else {
+      <loading></loading>
+    }
+  </section>
 </div>
