--- a/src/app/drafts/opponent-overview/opponent-preview/opponent-preview.component.scss
+++ b/src/app/drafts/opponent-overview/opponent-preview/opponent-preview.component.scss
@@ -1,99 +1,116 @@
-$draft-sprite-size: 4rem;
-
-.draft-bar {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  width: fit-content;
-  border: 1px solid var(--mat-sys-outline);
-  border-radius: 1rem;
-  padding: 0.5rem;
-  box-shadow: var(--mat-sys-level2);
-  pdz-sprite {
-    min-height: $draft-sprite-size;
-    min-width: $draft-sprite-size;
-    height: $draft-sprite-size;
-    width: $draft-sprite-size;
-    max-height: $draft-sprite-size;
-    max-width: $draft-sprite-size;
-  }
-  @media (min-width: 768px) {
-    display: hidden;
-  }
-}
-
 .matchups-section {
   width: fit-content;
   border: 1px solid var(--mat-sys-outline);
   border-radius: 1rem;
+  flex-grow: 1;
+  height: 100%;
 }
 
 .matchups-container {
   display: flex;
   flex-direction: column;
-  width: fit-content;
+  min-width: fit-content;
+  width: 100%;
+  gap: 0.25rem;
+  padding: 0 0.5rem;
 }
 
 .matchup {
-  background-color: var(--mat-sys-primary-container);
   width: 100%;
   padding: 0.25rem 0.5rem;
+  gap: 0.25rem;
+  display: flex;
+  position: relative;
+  align-items: stretch;
+  font-family: var(--pdz-font-fancy);
+  max-height: 6rem;
+  user-select: none;
+  border-radius: 1rem;
+  box-shadow: var(--mat-sys-level2);
+  background-color: var(--mat-sys-primary-container);
+
+  &:hover {
+    box-shadow: var(--mat-sys-level1);
+    cursor: pointer;
+  }
+}
+
+.matchup-info {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  border-bottom: 1px solid var(--mat-sys-outline-variant);
-
-  .matchup-header {
+  .matchup-stage {
+    position: absolute;
+    font-size: 0.6em;
+    color: var(--mat-sys-primary);
+    flex-shrink: 0;
+  }
+  .matchup-team-info-container {
     display: flex;
-    width: 100%;
+    flex-grow: 1;
+    gap: 0.25rem;
     align-items: center;
-    justify-content: space-between;
-    font-family: var(--pdz-font-fancy);
+    .matchup-team-info {
+      height: 100%;
+      justify-content: center;
+      display: flex;
+      flex-direction: column;
+      width: 12rem;
+      flex-shrink: 0;
+
+      .team-name,
+      .coach-name {
+        width: 100%;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+      }
+
+      .coach-name {
+        font-size: 0.8em;
+      }
+    }
+
+    .matchup-logo {
+      flex-shrink: 0;
+      overflow: hidden;
+      border-radius: var(--mat-sys-corner-medium);
+      box-shadow: var(--mat-sys-level1);
+      height: 3rem;
+      width: 3rem;
+      img {
+        aspect-ratio: 1/1;
+        object-fit: contain;
+      }
+    }
   }
 }
 
-.matchup-team-info {
-  height: 100%;
-  justify-content: center;
-  display: flex;
-  flex-direction: column;
-  width: 12rem;
-  flex-shrink: 0;
-  .team-name,
-  .coach-name {
-    width: 100%;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
-  }
-
-  .coach-name {
-    font-size: 0.8em;
-  }
-}
-
-$matchup-sprite-size: 3rem;
+$matchup-sprite-size: 4rem;
 .pokemon-container {
   display: flex;
-  gap: 0.5rem;
+  width: 100%;
   flex-grow: 1;
   overflow-x: auto;
-  scrollbar-width: none;
+  gap: 0.125rem;
   pdz-sprite {
-    min-height: $matchup-sprite-size;
-    min-width: $matchup-sprite-size;
-    height: $matchup-sprite-size;
-    width: $matchup-sprite-size;
+    max-height: $matchup-sprite-size;
+    aspect-ratio: 1/1;
   }
 }
 
 .score-button {
   font-size: 0.8em;
-  border: 1px solid var(--mat-sys-outline);
-  border-radius: 2rem;
-  padding: 0 0.25rem;
   min-width: 4rem;
+  padding: 3px;
+  border-radius: 0.625rem;
+  box-shadow: var(--mat-sys-level2);
+  &:hover {
+    box-shadow: var(--mat-sys-level1);
+  }
+  > div {
+    background-color: white;
+    border-radius: 0.5rem;
+  }
 }
 
 .stats-section {
@@ -109,5 +126,106 @@ $matchup-sprite-size: 3rem;
   align-items: center;
   justify-content: space-between;
   font-family: var(--pdz-font-fancy);
-  padding: 0 1rem;
+  padding: 0.5rem 1rem;
+}
+
+.preview-main {
+  display: flex;
+  overflow: hidden;
+  width: 100%;
+  gap: 0.5rem;
+  padding: 0 0.5rem 0.5rem;
+  align-items: stretch;
+  background-color: var(--pdz-test);
+}
+
+:host {
+  flex-grow: 1;
+  display: flex;
+}
+
+.stats-section {
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  .sprite-wrapper {
+    width: 4rem;
+    max-width: 4rem;
+  }
+
+  .table-container {
+    max-width: min(100rem, 100%);
+    height: 100%;
+  }
+
+  .content-container {
+    display: flex;
+    width: 100%;
+    flex-grow: 1;
+    justify-content: center;
+  }
+
+  .table-wrapper {
+    padding: 1rem;
+    overflow-x: auto;
+    height: 100%;
+  }
+  th,
+  td {
+    padding: 0 4px;
+    text-align: center;
+  }
+
+  th.cdk-header-cell {
+    border-bottom: 2px solid var(--mat-sys-outline);
+  }
+
+  table {
+    width: 100%;
+    border-collapse: separate;
+    border-spacing: 0 4px;
+  }
+
+  .title-bar {
+    position: relative;
+    padding: 1rem;
+  }
+
+  .back-button {
+    @media (min-width: 768px) {
+      position: absolute;
+      top: 0.5rem;
+      left: 0.5rem;
+    }
+  }
+
+  tr.cdk-row {
+    &:hover {
+      background-color: var(--mat-sys-surface-variant);
+    }
+  }
+
+  tr td:first-child {
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+  }
+  tr td:last-child {
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+  }
+}
+
+.options-container {
+  display: flex;
+  align-items: center;
+  gap: 0.125rem;
+}
+
+section {
+  height: 100%;
+  overflow-y: auto;
+}
+
+.score-placeholder {
+  padding: 1rem;
 }
