--- a/src/app/components/chat/chat.component.scss
+++ b/src/app/components/chat/chat.component.scss
@@ -1,17 +1,17 @@
-$primary-color: #007bff;
-$primary-hover-color: #0056b3;
-$border-color: #dee2e6;
-$background-color: #f8f9fa;
-$text-color: #212529;
-$timestamp-color: #6c757d;
-
+$primary-color: var(--mat-sys-primary);
+$primary-hover-color: var(--mat-sys-secondary);
+$border-color: var(--mat-sys-outline-variant);
+$text-color: var(--mat-sys-on-surface);
+$timestamp-color: var(--mat-sys-primary);
+$background-color: var(--mat-sys-surface);
 .message-list {
   min-height: 4rem;
   max-height: 20rem;
   overflow-y: auto;
-  padding: 1.25rem;
-  background: $background-color;
-
+  padding: 1rem;
+  border-radius: 0.5rem;
+  border: 1px solid $border-color;
+  background-color: $background-color;
   .message {
     display: flex;
     align-items: flex-end;
@@ -33,7 +33,6 @@ $timestamp-color: #6c757d;
     }
 
     .message-text {
-      // The actual message content
       padding-left: 0.25rem;
     }
   }
@@ -42,7 +41,6 @@ $timestamp-color: #6c757d;
 .message-input {
   display: flex;
   padding: 1rem;
-  border-top: 1px solid $border-color;
   background-color: #fff;
 
   textarea {
@@ -51,8 +49,8 @@ $timestamp-color: #6c757d;
     padding: 0.5rem 0.75rem;
     border-radius: 4px;
     font-size: 1rem;
-    font-family: inherit; // Ensure textarea uses the same font
-    resize: none; // Allow vertical resizing
+    font-family: inherit;
+    resize: none;
     transition:
       border-color 0.15s ease-in-out,
       box-shadow 0.15s ease-in-out;
@@ -73,7 +71,7 @@ $timestamp-color: #6c757d;
     border-radius: 4px;
     cursor: pointer;
     font-weight: 500;
-    align-self: flex-end; // Align button to the bottom
+    align-self: flex-end;
     transition: background-color 0.2s;
 
     &:hover {
