--- a/src/app/drafts/opponent-overview/opponent-overview.component.scss
+++ b/src/app/drafts/opponent-overview/opponent-overview.component.scss
@@ -14,6 +14,10 @@
 
 .draft-info-container {
   padding: 0 0.5rem;
+  @media (max-width: 768px) {
+    font-size: smaller;
+  }
+  flex-shrink: 0;
 }
 
 h2 {
@@ -40,17 +44,39 @@ $draft-sprite-size: 4rem;
 .draft-bar {
   display: flex;
   flex-grow: 1;
-  justify-content: center;
   width: fit-content;
+  overflow-x: auto;
+
+  @media (max-width: 768px) {
+    flex-basis: auto;
+    flex-grow: 1;
+    order: 0;
+    justify-content: center;
+  }
+
+  &::-webkit-scrollbar {
+    width: 12px;
+  }
+  &::-webkit-scrollbar-track {
+    background: transparent;
+  }
+  &::-webkit-scrollbar-thumb {
+    border-radius: 6px;
+    border: 3px solid transparent;
+    background-clip: content-box;
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+  scrollbar-width: thin;
+  scrollbar-color: rgba(0, 0, 0, 0.5) transparent;
   pdz-sprite {
+    @media (max-width: 768px) {
+      display: none;
+    }
     min-height: $draft-sprite-size;
     min-width: $draft-sprite-size;
     height: $draft-sprite-size;
     width: $draft-sprite-size;
     max-height: $draft-sprite-size;
     max-width: $draft-sprite-size;
-  }
-  @media (min-width: 768px) {
-    display: hidden;
   }
 }
