--- a/src/app/drafts/opponent-overview/opponent-preview/opponent-preview.component.html
+++ b/src/app/drafts/opponent-overview/opponent-preview/opponent-preview.component.html
@@ -2,16 +2,6 @@
   <section class="matchups-section alternate">
     <div class="section-header">
       <h3>Matches</h3>
-      <!-- <button
-        (click)="newOpponent()"
-        class="p-2 m-3 rounded-lg shadow-md bg-bTeam-300 hover:shadow shadow-bTeam-600"
-        title="Add Matchup"
-      >
-        <div class="w-6 h-6">
-          <plus-svg class="stroke-symbolColor-main"></plus-svg>
-        </div>
-      </button> -->
-
       <button mat-mini-fab (click)="newOpponent()">
         <mat-icon>add</mat-icon>
       </button>
@@ -88,127 +78,122 @@
     <div class="section-header">Stats</div>
     @if (teamStats.value !== null) {
       @if (teamStats.value.length > 0) {
-        <div class="content-container">
-          <div class="table-container">
-            <div class="table-wrapper">
-              <table
-                cdk-table
-                [dataSource]="teamStats.value!"
-                matSort
-                [matSortDisableClear]="true"
-                (matSortChange)="sort($event)"
-              >
-                <ng-container cdkColumnDef="sprite">
-                  <th cdk-header-cell *cdkHeaderCellDef></th>
-                  <td cdk-cell *cdkCellDef="let element">
-                    <div class="sprite-wrapper">
-                      <pdz-sprite
-                        [flipped]="true"
-                        [pokemon]="element.pokemon"
-                      ></pdz-sprite>
-                    </div>
-                  </td>
-                </ng-container>
-                <ng-container cdkColumnDef="name">
-                  <th mat-sort-header="name" cdk-header-cell *cdkHeaderCellDef>
-                    Name
-                  </th>
-                  <td cdk-cell *cdkCellDef="let element">
-                    {{ element.pokemon.name }}
-                  </td>
-                </ng-container>
+        <div class="table-container">
+          <div class="table-wrapper">
+            <table
+              cdk-table
+              [dataSource]="teamStats.value!"
+              matSort
+              [matSortDisableClear]="true"
+              (matSortChange)="sort($event)"
+            >
+              <ng-container cdkColumnDef="sprite">
+                <th cdk-header-cell *cdkHeaderCellDef></th>
+                <td cdk-cell *cdkCellDef="let element">
+                  <div class="sprite-wrapper">
+                    <pdz-sprite
+                      [flipped]="true"
+                      [pokemon]="element.pokemon"
+                    ></pdz-sprite>
+                  </div>
+                </td>
+              </ng-container>
+              <ng-container cdkColumnDef="name">
+                <th mat-sort-header="name" cdk-header-cell *cdkHeaderCellDef>
+                  Name
+                </th>
+                <td cdk-cell *cdkCellDef="let element">
+                  {{ element.pokemon.name }}
+                </td>
+              </ng-container>
 
-                <ng-container cdkColumnDef="gb">
-                  <th
-                    mat-sort-header="gb"
-                    start="desc"
-                    cdk-header-cell
-                    *cdkHeaderCellDef
-                  >
-                    Games Brought
-                  </th>
-                  <td cdk-cell *cdkCellDef="let element">
-                    {{ element.brought }}
-                  </td>
-                </ng-container>
+              <ng-container cdkColumnDef="gb">
+                <th
+                  mat-sort-header="gb"
+                  start="desc"
+                  cdk-header-cell
+                  *cdkHeaderCellDef
+                >
+                  Games Brought
+                </th>
+                <td cdk-cell *cdkCellDef="let element">
+                  {{ element.brought }}
+                </td>
+              </ng-container>
 
-                <ng-container cdkColumnDef="dk">
-                  <th
-                    mat-sort-header="dk"
-                    start="desc"
-                    cdk-header-cell
-                    *cdkHeaderCellDef
-                  >
-                    Direct Kills
-                  </th>
-                  <td cdk-cell *cdkCellDef="let element">
-                    {{ element.kills }}
-                  </td>
-                </ng-container>
+              <ng-container cdkColumnDef="dk">
+                <th
+                  mat-sort-header="dk"
+                  start="desc"
+                  cdk-header-cell
+                  *cdkHeaderCellDef
+                >
+                  Direct Kills
+                </th>
+                <td cdk-cell *cdkCellDef="let element">
+                  {{ element.kills }}
+                </td>
+              </ng-container>
 
-                <ng-container cdkColumnDef="ik">
-                  <th
-                    mat-sort-header="ik"
-                    start="desc"
-                    cdk-header-cell
-                    *cdkHeaderCellDef
-                  >
-                    Indirect Kills
-                  </th>
-                  <td cdk-cell *cdkCellDef="let element">
-                    {{ element.indirect }}
-                  </td>
-                </ng-container>
+              <ng-container cdkColumnDef="ik">
+                <th
+                  mat-sort-header="ik"
+                  start="desc"
+                  cdk-header-cell
+                  *cdkHeaderCellDef
+                >
+                  Indirect Kills
+                </th>
+                <td cdk-cell *cdkCellDef="let element">
+                  {{ element.indirect }}
+                </td>
+              </ng-container>
 
-                <ng-container cdkColumnDef="deaths">
-                  <th
-                    mat-sort-header="deaths"
-                    start="desc"
-                    cdk-header-cell
-                    *cdkHeaderCellDef
-                  >
-                    Deaths
-                  </th>
-                  <td cdk-cell *cdkCellDef="let element">
-                    {{ element.deaths }}
-                  </td>
-                </ng-container>
+              <ng-container cdkColumnDef="deaths">
+                <th
+                  mat-sort-header="deaths"
+                  start="desc"
+                  cdk-header-cell
+                  *cdkHeaderCellDef
+                >
+                  Deaths
+                </th>
+                <td cdk-cell *cdkCellDef="let element">
+                  {{ element.deaths }}
+                </td>
+              </ng-container>
 
-                <ng-container cdkColumnDef="kdr">
-                  <th
-                    mat-sort-header="kdr"
-                    start="desc"
-                    cdk-header-cell
-                    *cdkHeaderCellDef
-                  >
-                    Kills/Deaths
-                  </th>
-                  <td cdk-cell *cdkCellDef="let element">
-                    {{ element.kdr | number: "1.0-2" }}
-                  </td>
-                </ng-container>
+              <ng-container cdkColumnDef="kdr">
+                <th
+                  mat-sort-header="kdr"
+                  start="desc"
+                  cdk-header-cell
+                  *cdkHeaderCellDef
+                >
+                  Kills/Deaths
+                </th>
+                <td cdk-cell *cdkCellDef="let element">
+                  {{ element.kdr | number: "1.0-2" }}
+                </td>
+              </ng-container>
 
-                <ng-container cdkColumnDef="kpg">
-                  <th
-                    mat-sort-header="kpg"
-                    start="desc"
-                    cdk-header-cell
-                    *cdkHeaderCellDef
-                  >
-                    Kills/Game
-                  </th>
-                  <td cdk-cell *cdkCellDef="let element">
-                    {{ element.kpg | number: "1.0-2" }}
-                  </td>
-                </ng-container>
+              <ng-container cdkColumnDef="kpg">
+                <th
+                  mat-sort-header="kpg"
+                  start="desc"
+                  cdk-header-cell
+                  *cdkHeaderCellDef
+                >
+                  Kills/Game
+                </th>
+                <td cdk-cell *cdkCellDef="let element">
+                  {{ element.kpg | number: "1.0-2" }}
+                </td>
+              </ng-container>
 
-                <tr cdk-header-row *cdkHeaderRowDef="displayedColumns"></tr>
-                <tr
-                  cdk-row
-                  *cdkRowDef="let row; columns: displayedColumns"
-                ></tr>
-              </table>
-            </div>
+              <tr cdk-header-row *cdkHeaderRowDef="displayedColumns"></tr>
+              <tr cdk-row *cdkRowDef="let row; columns: displayedColumns"></tr>
+            </table>
           </div>
         </div>
       } @else {
