--- a/src/app/battle-zone/landing/landing.component.scss
+++ b/src/app/battle-zone/landing/landing.component.scss
@@ -10,7 +10,7 @@
   color: var(--mat-sys-primary);
   height: 8rem;
   border-radius: 2rem;
-  box-shadow: var(--mat-sys-level2);
+  box-shadow: var(--pdz-level2);
   &:hover {
     background-color: var(--mat-sys-surface-variant);
   }
