--- a/src/app/battle-zone/sign-up/sign-up.component.scss
+++ b/src/app/battle-zone/sign-up/sign-up.component.scss
@@ -11,7 +11,7 @@ $form-color: var(--mat-sys-surface-container);
   max-width: 48rem;
   padding: 1.5rem;
   border-radius: 0.5rem;
-  box-shadow: var(--mat-sys-level2);
+  box-shadow: var(--pdz-level2);
 }
 
 mat-expansion-panel {
