--- a/src/app/debug/components/debug-components.component.html
+++ b/src/app/debug/components/debug-components.component.html
@@ -847,6 +847,11 @@
   <div>
     <div class="debug-title">Levels</div>
     <div class="flex ml-5">
+      <div class="p-1 rounded level--5">Level -5</div>
+      <div class="p-1 rounded level--4">Level -4</div>
+      <div class="p-1 rounded level--3">Level -3</div>
+      <div class="p-1 rounded level--2">Level -2</div>
+      <div class="p-1 rounded level--1">Level -1</div>
       <div class="p-1 rounded level-0">Level 0</div>
       <div class="p-1 rounded level-1">Level 1</div>
       <div class="p-1 rounded level-2">Level 2</div>
