--- a/src/app/drafts/draft-overview/draft-stats/draft-stats.component.scss
+++ b/src/app/drafts/draft-overview/draft-stats/draft-stats.component.scss
@@ -19,7 +19,7 @@
   overflow-x: auto;
   border-radius: 1rem;
   background-color: var(--mat-sys-surface);
-  box-shadow: var(--mat-sys-level3);
+  box-shadow: var(--pdz-level3);
 }
 th,
 td {
