--- a/src/app/planner/typechart/typechart.component.scss
+++ b/src/app/planner/typechart/typechart.component.scss
@@ -18,7 +18,7 @@
   height: fit-content;
   border-radius: 1rem;
   background-color: var(--mat-sys-surface);
-  box-shadow: var(--mat-sys-level3);
+  box-shadow: var(--pdz-level3);
 }
 
 .title-container {
