--- a/src/app/drafts/matchup-overview/matchup/matchup.component.scss
+++ b/src/app/drafts/matchup-overview/matchup/matchup.component.scss
@@ -18,6 +18,6 @@
     width: fit-content;
     border-radius: 1rem;
     background-color: var(--mat-sys-surface);
-    box-shadow: var(--mat-sys-level3);
+    box-shadow: var(--pdz-level3);
   }
 }
