--- a/src/app/drafts/matchup-overview/matchup/speedchart/speedchart.component.scss
+++ b/src/app/drafts/matchup-overview/matchup/speedchart/speedchart.component.scss
@@ -137,7 +137,7 @@
 }
 
 .filter-main {
-  box-shadow: var(--mat-sys-level2);
+  box-shadow: var(--pdz-level2);
   border-radius: 5px;
   background-color: var(--mat-sys-surface);
   padding: 10px;
