--- a/src/app/pages/homepage/homepage.component.scss
+++ b/src/app/pages/homepage/homepage.component.scss
@@ -38,7 +38,7 @@
   .news-wrapper {
     padding: 0.5rem 0.125rem 0.5rem 0.5rem;
     background-color: var(--mat-sys-surface);
-    box-shadow: var(--mat-sys-level2);
+    box-shadow: var(--pdz-level2);
     border-radius: 1rem;
     flex-grow: 1;
     overflow-y: scroll;
