--- a/src/app/planner/summary/summary.component.scss
+++ b/src/app/planner/summary/summary.component.scss
@@ -14,5 +14,5 @@
   height: fit-content;
   border-radius: 1rem;
   background-color: var(--mat-sys-surface);
-  box-shadow: var(--mat-sys-level3);
+  box-shadow: var(--pdz-level3);
 }
