--- a/src/app/tools/quick-draft/quick-draft.component.scss
+++ b/src/app/tools/quick-draft/quick-draft.component.scss
@@ -41,7 +41,7 @@ h3 {
 }
 
 .qd-option {
-  box-shadow: var(--mat-sys-level2);
+  box-shadow: var(--pdz-level2);
   border-radius: 1rem;
   border: 2px solid var(--mat-sys-outline-variant);
   margin: 4px;
