--- a/src/app/tools/quick-matchup/form/quick-matchup-form.component.scss
+++ b/src/app/tools/quick-matchup/form/quick-matchup-form.component.scss
@@ -2,7 +2,7 @@
   background-color: var(--mat-sys-surface);
   color: var(--mat-sys-on-surface);
   border-radius: 1rem;
-  box-shadow: var(--mat-sys-level2);
+  box-shadow: var(--pdz-level2);
 
   .details-title {
     padding: 0 0.5rem 0.5rem;
