--- a/src/app/util/matchup/movechart-core/moves.component.scss
+++ b/src/app/util/matchup/movechart-core/moves.component.scss
@@ -14,7 +14,7 @@
 
 .movechart {
   display: block;
-  box-shadow: var(--mat-sys-level2);
+  box-shadow: var(--pdz-level2);
   overflow-x: auto;
 }
 
