--- a/src/app/util/matchup/typechart/typechart-core.component.scss
+++ b/src/app/util/matchup/typechart/typechart-core.component.scss
@@ -17,7 +17,7 @@
   overflow: hidden;
   &.type-colored {
     color: white;
-    box-shadow: var(--mat-sys-level1);
+    box-shadow: var(--pdz-level1);
   }
   &.type-empty {
     color: transparent;
@@ -44,7 +44,7 @@ th {
   align-items: center;
   width: 2.5rem;
   border-radius: 0.25rem;
-  box-shadow: var(--mat-sys-level1);
+  box-shadow: var(--pdz-level1);
   margin-top: 0px;
 
   margin-bottom: 1px;
@@ -52,7 +52,7 @@ th {
     margin-bottom: 0px;
     margin-top: 1px;
 
-    box-shadow: var(--mat-sys-level0);
+    box-shadow: var(--pdz-level0);
   }
 
   &.type-container {
@@ -155,7 +155,7 @@ tbody {
       font-size: 0.65em;
       font-weight: bold;
       overflow: hidden;
-      box-shadow: var(--mat-sys-level1);
+      box-shadow: var(--pdz-level1);
     }
   }
 }
@@ -182,7 +182,7 @@ tbody {
   font-size: 0.75em;
   font-weight: bold;
   overflow: hidden;
-  box-shadow: var(--mat-sys-level1);
+  box-shadow: var(--pdz-level1);
 }
 
 .stat-cell {
