fix sorting logic for opponent

--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -18,7 +18,7 @@
       <button mat-raised-button class="homepage-button" routerLink="/about">
         About Pokemon DraftZone
       </button>
-      <button mat-raised-button target="_blank" class="homepage-button">
+      <button mat-raised-button class="homepage-button">
         <a href="https://discord.gg/sQUEBW4UVx" target="_blank">
           Join Our Discord
         </a>
