--- a/src/app/tools/replay_analyzer/replay.component.html
+++ b/src/app/tools/replay_analyzer/replay.component.html
@@ -30,7 +30,7 @@
   >
     The replay analyzer is currently still in testing. If you find errors,
     please share the replay on our
-    <a href="https://discord.gg/sQUEBW4UVx" class="text-blue-500">Discord</a>.
+    <a href="https://discord.gg/sQUEBW4UVx" target="_blank" class="text-blue-500">Discord</a>.
   </div>
 </div>
 <!-- <loading *ngIf="analyzed && !replayData"></pdz-loading> -->
