--- a/src/app/tools/replay_analyzer/replay.component.html
+++ b/src/app/tools/replay_analyzer/replay.component.html
@@ -244,4 +244,12 @@
       </div>
     </div>
   </div>
-}
+</div>
+
+<div *ngIf="replayData" class="flex justify-center w-full p-2">
+  <div
+    class="flex flex-col items-center p-2 border-2 max-w-full w-fit bg-menu-100 rounded-xl border-menu-400"
+  >
+  
+  </div>
+</div>
